# JetsonTRT

./: CMakeLists.txt  README.md
demos/: demo.cpp
include/: generic.hpp  yolov8.hpp
src/: generic.cpp  yolov8.cpp
